tests/NormalTests/paczka1/fuzzy1/69231504.err
Error in line 12: zP5kQ9ikA6g S878 15,9
Error in line 13: zP5kQ9ikA6g A388 69,5
Error in line 19: zP5kQ9ikA6g A365 72,6
Error in line 15: kRnBqL3XcWx A365 94,9
Error in line 29: kRnBqL3XcWx S834 62,5
Error in line 31: A365 A365 91,5
